--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -98,7 +98,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TextView" />
-
+ <!--  
         <TextView
             android:id="@+id/textView11"
             android:layout_width="wrap_content"
@@ -157,7 +157,7 @@
             android:id="@+id/textView20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView" /> -->
 
     </TableLayout>
 
